@@ -63,6 +63,7 @@ phpMyAdmin - ChangeLog
 + View editing via a generated ALTER VIEW
 - bug #3408377 [interface] Deleting table from the DB does not change the table counter
 + rfe #3438266 [designer] Toggle for relation lines
+- bug #3442069 [AJAX] database list not updated after adding/deleting a user + database
 
 3.4.9.0 (not yet released)
 - bug #3442028 [edit] Inline editing enum fields with null shows no dropdown
